1-11-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Implemented avuton's request, I don't like
	it.. lets see how it works out.
31-10-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Add right mouse menu in right pane
28-10-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Added clear/shuffle/info option

25-10-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Moved code around, improved function naming.
	* src/playlist3.c:	Added replacing in the right mouse menu for
	real
	* src/playlist3.c:	Added right mouse menu for artist browser.
	* src/playlist3.c:	Added user feedback. (in statusbar)

24-10-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Moved code around, improved function naming.
	* sr/cplaylist3.c:	Added replace option in right mouse menu.

22-10-2004 Qball <Qball@qballcow.nl.
	* Started initial work on playlist version 3

16-10-2004 Qball <Qball@qballcow.nl>
	* Fixed severall smaller autotools issues.
	* src/eggtrayicon.c:	Fixed gettex compile time error.
	* src/player.c:		Update all displays even when paused/stopped
	(bug $319)
	* src/player.c:		Display goes to hh:mm mode when more then 99
	minutes have passed.
	* src/tray-icon.c:	possible fix for tooltip painting.
	* src/tray-icon.d:	Added function that update the ooltip and
	returns true


06-10-2004 Qball, <Qball@qballcow.nl>
	* src/tray_icon.c:	Fixed case that tooltip wouldn't go away when
	pauzed.
				Click on tooltip window will now hide it.
	* src/main.h:		Made seekstep a define (default 3 seconds)

01-10-2004 Qball ,Qball@qballcow.nl>
	* src/preferences.c:	Added configuration option to show the
	tray_icon tooltip.
	* glade/playlist.glade:	Fixed keybinding collition.
	* src/tray_icon.c:	Fixed placing tray icon.
	* src/tray_icon.c:	If text in tooltip is changed, a  new position
	is caculated aswell.
	* src/playlist2.c:	Pressing wipe while search entry empty scrolls
	to the playing song.

30-09-2004 Qball <Qball@qballcow.nl>