@@ -53,7 +53,7 @@
 		  <signal name="row_expanded" handler="pl3_cat_row_expanded" last_modification_time="Mon, 25 Oct 2004 05:44:21 GMT"/>
 		  <signal name="row_activated" handler="pl3_cat_row_activated" last_modification_time="Mon, 25 Oct 2004 05:44:07 GMT"/>
 		  <signal name="button_press_event" handler="pl3_cat_tree_button_press_event" last_modification_time="Mon, 25 Oct 2004 05:44:15 GMT"/>
-		  <signal name="key_press_event" handler="pl3_window_key_press_event" last_modification_time="Sun, 31 Oct 2004 15:39:58 GMT"/>
+		  <signal name="key_press_event" handler="pl3_cat_key_press_event" last_modification_time="Tue, 02 Nov 2004 08:42:09 GMT"/>
 		</widget>
 	      </child>
 	    </widget>
@@ -90,7 +90,7 @@
 		      <property name="enable_search">True</property>
 		      <signal name="row_activated" handler="pl3_playlist_row_activated" last_modification_time="Mon, 25 Oct 2004 05:47:00 GMT"/>
 		      <signal name="button_press_event" handler="pl3_playlist_button_press_event" last_modification_time="Tue, 26 Oct 2004 18:24:39 GMT"/>
-		      <signal name="key_press_event" handler="pl3_window_key_press_event" last_modification_time="Sun, 31 Oct 2004 15:39:04 GMT"/>
+		      <signal name="key_press_event" handler="pl3_playlist_key_press_event" last_modification_time="Tue, 02 Nov 2004 08:42:01 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
