@@ -1,3 +1,7 @@
+2-11-2004 Qball <Qball@qballcow.nl>
+	* src/playlist3.c:	Can't open row in plaaylist when disconnected.
+	* src/playlist3.c:	activating a row now expands it.
+
 1-11-2004 Qball <Qball@qballcow.nl>
 	* src/playlist3.c:	Implemented avuton's request, I don't like
 	it.. lets see how it works out.
